minikube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: final-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /($|.*)
        pathType: Prefix
        backend:
          service:
            name: ui-container
            port:
              number: 5005
